fixing data bridge issues

--- a/modules/samples/producers/foo-data/pom.xml
+++ b/modules/samples/producers/foo-data/pom.xml
@@ -26,23 +26,22 @@
     </parent>
 
     <artifactId>foo-data-client</artifactId>
-    <name>WSO2 CEP - Producer - Mediation Stats Clients</name>
+    <name>WSO2 CEP - Producer - Foo Data Clients</name>
 
 
     <dependencies>
         <dependency>
-            <groupId>org.wso2.carbon.commons</groupId>
-            <artifactId>org.wso2.carbon.databridge.agent.thrift</artifactId>
+            <groupId>org.wso2.carbon.analytics-common</groupId>
+            <artifactId>org.wso2.carbon.databridge.agent</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.wso2.carbon.commons</groupId>
+            <groupId>org.wso2.carbon.analytics-common</groupId>
             <artifactId>org.wso2.carbon.databridge.commons</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.wso2.carbon.commons</groupId>
+            <groupId>org.wso2.carbon.analytics-common</groupId>
             <artifactId>org.wso2.carbon.databridge.commons.thrift</artifactId>
         </dependency>
     </dependencies>
-
 
 </project>
