--- a/modules/integration/pom.xml
+++ b/modules/integration/pom.xml
@@ -35,7 +35,7 @@
         <module>tests-common/ui-pages</module>
         <module>tests-common/integration-test-utils</module>
         <module>tests-common/test-artifacts</module>
-        <!--<module>tests-integration/tests</module>-->
+        <module>tests-integration/tests</module>
         <!--<module>tests-ui-integration/tests-ui</module>-->
     </modules>
 
