--- a/modules/integration/pom.xml
+++ b/modules/integration/pom.xml
@@ -36,7 +36,7 @@
         <module>tests-common/integration-test-utils</module>
         <module>tests-common/test-artifacts</module>
         <module>tests-integration/tests</module>
-        <!--<module>tests-ui-integration/tests-ui</module>-->
+        <module>tests-ui-integration/tests-ui</module>
     </modules>
 
 </project>
