--- a/modules/p2-profile-gen/pom.xml
+++ b/modules/p2-profile-gen/pom.xml
@@ -244,6 +244,9 @@
                                 <featureArtifactDef>
                                     org.wso2.carbon.analytics-common:org.wso2.carbon.event.application.deployer.feature:${carbon.analytics-common.version}
                                 </featureArtifactDef>
+                                <featureArtifactDef>
+                                    org.wso2.carbon.event-processing:org.wso2.carbon.event.execution.manager.feature:${carbon.event-processing.version}
+                                </featureArtifactDef>
 
 
                                 <!-- cep ui features -->
@@ -479,7 +482,10 @@
                                     <id>org.wso2.carbon.event.application.deployer.feature.group</id>
                                     <version>${carbon.analytics-common.version}</version>
                                 </feature>
-
+                                <feature>
+                                    <id>org.wso2.carbon.event.execution.manager.feature.group</id>
+                                    <version>${carbon.event-processing.version}</version>
+                                </feature>
 
                                 <!-- cep ui features -->
                                 <feature>
