--- a/pom.xml
+++ b/pom.xml
@@ -108,31 +108,13 @@
             </dependency>
 
             <!--Carbon-event-processing-->
-            <dependency>
-                <groupId>org.wso2.carbon.event-processing</groupId>
-                <artifactId>org.wso2.carbon.event.receiver.stub</artifactId>
-                <version>${carbon.event-processing.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.wso2.carbon.event-processing</groupId>
-                <artifactId>org.wso2.carbon.event.publisher.stub</artifactId>
-                <version>${carbon.event-processing.version}</version>
-            </dependency>
+
             <dependency>
                 <groupId>org.wso2.carbon.event-processing</groupId>
                 <artifactId>org.wso2.carbon.event.processor.stub</artifactId>
                 <version>${carbon.event-processing.version}</version>
             </dependency>
-            <dependency>
-                <groupId>org.wso2.carbon.event-processing</groupId>
-                <artifactId>org.wso2.carbon.event.tracer.stub</artifactId>
-                <version>${carbon.event-processing.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.wso2.carbon.event-processing</groupId>
-                <artifactId>org.wso2.carbon.event.statistics.stub</artifactId>
-                <version>${carbon.event-processing.version}</version>
-            </dependency>
+
 
             <!--Carbon kernel-->
             <dependency>
@@ -264,7 +246,26 @@
                 <artifactId>org.wso2.carbon.event.stream.stub</artifactId>
                 <version>${carbon.analytics-common.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.wso2.carbon.analytics-common</groupId>
+                <artifactId>org.wso2.carbon.event.receiver.stub</artifactId>
+                <version>${carbon.analytics-common.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon.analytics-common</groupId>
+                <artifactId>org.wso2.carbon.event.publisher.stub</artifactId>
+                <version>${carbon.analytics-common.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon.analytics-common</groupId>
+                <artifactId>org.wso2.carbon.event.tracer.stub</artifactId>
+                <version>${carbon.analytics-common.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon.analytics-common</groupId>
+                <artifactId>org.wso2.carbon.event.statistics.stub</artifactId>
+                <version>${carbon.analytics-common.version}</version>
+            </dependency>
 
             <!--Third party-->
             <dependency>
@@ -434,6 +435,55 @@
         </pluginRepository>
     </pluginRepositories>
 
+    <!--<repositories>-->
+        <!--<repository>-->
+            <!--<id>wso2-nexus</id>-->
+            <!--<name>WSO2 internal Repository</name>-->
+            <!--<url>http://maven.wso2.org/nexus/content/groups/wso2-public/</url>-->
+            <!--<releases>-->
+                <!--<enabled>true</enabled>-->
+                <!--<updatePolicy>daily</updatePolicy>-->
+                <!--<checksumPolicy>ignore</checksumPolicy>-->
+            <!--</releases>-->
+        <!--</repository>-->
+
+        <!--<repository>-->
+            <!--<id>wso2.releases</id>-->
+            <!--<name>WSO2 internal Repository</name>-->
+            <!--<url>http://maven.wso2.org/nexus/content/repositories/releases/</url>-->
+            <!--<releases>-->
+                <!--<enabled>true</enabled>-->
+                <!--<updatePolicy>daily</updatePolicy>-->
+                <!--<checksumPolicy>ignore</checksumPolicy>-->
+            <!--</releases>-->
+        <!--</repository>-->
+
+        <!--<repository>-->
+            <!--<id>wso2.staging</id>-->
+            <!--<name>WSO2 staging Repository</name>-->
+            <!--<url>http://maven.wso2.org/nexus/content/repositories/orgwso2carbonregistry-019/</url>-->
+            <!--<releases>-->
+                <!--<enabled>true</enabled>-->
+                <!--<updatePolicy>daily</updatePolicy>-->
+                <!--<checksumPolicy>ignore</checksumPolicy>-->
+            <!--</releases>-->
+        <!--</repository>-->
+
+        <!--<repository>-->
+            <!--<id>wso2.snapshots</id>-->
+            <!--<name>Apache Snapshot Repository</name>-->
+            <!--<url>http://maven.wso2.org/nexus/content/repositories/snapshots/</url>-->
+            <!--<snapshots>-->
+                <!--<enabled>true</enabled>-->
+                <!--<updatePolicy>daily</updatePolicy>-->
+            <!--</snapshots>-->
+            <!--<releases>-->
+                <!--<enabled>false</enabled>-->
+            <!--</releases>-->
+        <!--</repository>-->
+
+    <!--</repositories>-->
+
     <scm>
         <url>https://github.com/wso2/product-cep.git</url>
         <developerConnection>scm:git:https://github.com/wso2/product-cep.git</developerConnection>
@@ -501,6 +551,45 @@
                 <version>2.4</version>
             </plugin>
         </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.felix</groupId>
+                    <artifactId>maven-scr-plugin</artifactId>
+                    <version>1.7.2</version>
+                    <executions>
+                        <execution>
+                            <id>generate-scr-scrdescriptor</id>
+                            <goals>
+                                <goal>scr</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.felix</groupId>
+                    <artifactId>maven-bundle-plugin</artifactId>
+                    <version>2.3.5</version>
+                    <extensions>true</extensions>
+                    <configuration>
+                        <obrRepository>NONE</obrRepository>
+                        <!--<instructions>
+                          <_include>-osgi.bnd</_include>
+                        </instructions>-->
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-antrun-plugin</artifactId>
+                    <version>1.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>build-helper-maven-plugin</artifactId>
+                    <version>1.7</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
     <profiles>
         <profile>
@@ -542,23 +631,24 @@
 
     <properties>
         <!--CEP versions-->
-        <jaggery.version>0.9.1-SNAPSHOT</jaggery.version>
-        <jaggery.modules.version>1.2.0</jaggery.modules.version>
-        <carbon.deployment.version>4.3.2-SNAPSHOT</carbon.deployment.version>
-        <carbon.commons.version>4.3.6-SNAPSHOT</carbon.commons.version>
+        <!--todo enable jaggery-->
+        <!--<jaggery.version>0.9.1-SNAPSHOT</jaggery.version>-->
+        <!--<jaggery.modules.version>1.2.0</jaggery.modules.version>-->
+        <carbon.deployment.version>4.4.0</carbon.deployment.version>
+        <carbon.commons.version>4.4.0</carbon.commons.version>
         <carbon.analytics-common.version>1.0.0-SNAPSHOT</carbon.analytics-common.version>
-        <carbon.identity.version>4.3.4-SNAPSHOT</carbon.identity.version>
-        <carbon.registry.version>4.3.2-SNAPSHOT</carbon.registry.version>
+        <carbon.identity.version>4.4.0</carbon.identity.version>
+        <carbon.registry.version>4.4.1</carbon.registry.version>
         <!--<carbon.storagemgt.version>4.3.1-SNAPSHOT</carbon.storagemgt.version>-->
-        <carbon.multitenancy.version>4.3.5-SNAPSHOT</carbon.multitenancy.version>
-        <carbon.governance.version>4.3.0</carbon.governance.version>
+        <carbon.multitenancy.version>4.4.0</carbon.multitenancy.version>
+        <carbon.governance.version>4.4.0</carbon.governance.version>
 
         <!--<siddhi.version>3.</siddhi.version>-->
         <cep.version>4.0.0-SNAPSHOT</cep.version>
         <carbon.event-processing.version>2.0.4-SNAPSHOT</carbon.event-processing.version>
 
         <!-- Carbon kernel version-->
-        <carbon.kernel.version>4.4.0-SNAPSHOT</carbon.kernel.version>
+        <carbon.kernel.version>4.4.0</carbon.kernel.version>
         <!--<carbon.kernel.imp.pkg.version>[4.3.0, 4.4.0)</carbon.kernel.imp.pkg.version>-->
         <!--<carbon.kernel.registry.imp.pkg.version>[1.0.1, 2.0.0)</carbon.kernel.registry.imp.pkg.version>-->
         <carbon.p2.plugin.version>1.5.3</carbon.p2.plugin.version>
