--- a/pom.xml
+++ b/pom.xml
@@ -584,8 +584,8 @@
 
     <properties>
         <!--CEP versions-->
-        <!--<jaggery.version>0.9.0</jaggery.version>-->
-        <jaggery.modules.version>1.2.0</jaggery.modules.version>
+        <jaggery.version>0.10.1</jaggery.version>
+        <jaggery.modules.version>1.3.0</jaggery.modules.version>
         <carbon.deployment.version>4.4.0</carbon.deployment.version>
         <carbon.commons.version>4.4.0</carbon.commons.version>
         <carbon.analytics-common.version>1.0.1-SNAPSHOT</carbon.analytics-common.version>
