Committing MQTT Client and samples

--- a/modules/samples/producers/pom.xml
+++ b/modules/samples/producers/pom.xml
@@ -36,6 +36,7 @@
         <module>wso2-event</module>
         <module>http</module>
         <module>jms-client</module>
+        <module>mqtt-client</module>
 
         <!--<module>stock-quote</module>-->
         <!--<module>service-stats</module>-->
