--- a/modules/samples/producers/kafka/build.xml
+++ b/modules/samples/producers/kafka/build.xml
@@ -24,7 +24,7 @@
     <property name="temp.dir" value="temp"/>
     <property name="lib.dir" value="../../lib"/>
     <property name="class.dir" value="${temp.dir}/classes"/>
-    <property name="main-class" value="org.wso2.carbon.sample.http.Http"/>
+    <property name="main-class" value="org.wso2.carbon.sample.kafka.Kafka"/>
     <property name="username" value="admin"/>
     <property name="password" value="admin"/>
 
@@ -35,23 +35,11 @@
     <path id="javac.classpath">
         <pathelement path="${class.dir}"/>
         <fileset dir="${lib.dir}"/>
-        <fileset dir="${cep.home}/repository/components/plugins/">
+        <fileset dir="${carbon.home}/repository/components/plugins/">
             <include name="org.wso2.carbon.logging_*.jar"/>
-            <include name="commons-pool_*.jar"/>
-            <include name="httpclient_*.jar"/>
-            <include name="httpcore_*.jar"/>
-            <include name="commons-httpclient_*.jar"/>
-            <include name="commons-codec_*.jar"/>
             <include name="slf4j.log4j12_*.jar"/>
             <include name="slf4j.api_*.jar"/>
-            <include name="axis2_*.jar"/>
-            <include name="axiom_*.jar"/>
-            <include name="wsdl4j_*.jar"/>
-            <include name="XmlSchema_*.jar"/>
-            <include name="neethi_*.jar"/>
-            <include name="org.wso2.securevault_*.jar"/>
-            <include name="com.google.gson_*.jar"/>
-            <include name="libthrift_*.jar"/>
+            <include name="json_*.jar"/>
         </fileset>
     </path>
 
@@ -80,14 +68,13 @@
     </target>
 
     <target name="run" depends="compile">
-        <echo> Configure -Durl=xxxx and ( -DfilePath=xxxx or -Dsn='sample number') optionally use -Dusername=xxxx -Dpassword=xxxx </echo>
+        <echo> Configure -Durl=xxxx -topic=xxxx and ( -DfilePath=xxxx or -Dsn='sample number' ) </echo>
         <java classname="${main-class}"
               classpathref="javac.classpath" fork="true">
             <arg value="${url}"/>
-            <arg value="${username}"/>
-            <arg value="${password}"/>
-            <arg value="${sn}"/>
+            <arg value="${topic}"/>
             <arg value="${filePath}"/>
+            <arg value="${sn}"/>
         </java>
     </target>
 
