adding name for sample producer consumer poms

--- a/modules/samples/consumers/generic-log-service/pom.xml
+++ b/modules/samples/consumers/generic-log-service/pom.xml
@@ -26,6 +26,7 @@
     </parent>
 
     <artifactId>generic-log-service</artifactId>
+    <name>WSO2 CEP - Consumer - Generic Log Service</name>
     <packaging>war</packaging>
 
     <repositories>
