--- a/modules/samples/consumers/axis2-log-service/pom.xml
+++ b/modules/samples/consumers/axis2-log-service/pom.xml
@@ -25,7 +25,7 @@
         <version>4.0.0-SNAPSHOT</version>
     </parent>
     <artifactId>axis2-log-service</artifactId>
-    <name>WSO2 CEP - Consumer - Log Service</name>
+    <name>WSO2 CEP - Consumer - Axis2 Log Service</name>
 
 
     <dependencies>
