--- a/modules/samples/consumers/mqtt/pom.xml
+++ b/modules/samples/consumers/mqtt/pom.xml
@@ -26,7 +26,7 @@
     </parent>
 
     <artifactId>mqtt-consumer</artifactId>
-    <name>MQTT Consumer</name>
+    <name>WSO2 CEP - Consumer - MQTT Consumer</name>
 
 
     <dependencies>
