--- a/modules/samples/producers/kafka/pom.xml
+++ b/modules/samples/producers/kafka/pom.xml
@@ -26,6 +26,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>kafka-client</artifactId>
+    <name>WSO2 CEP - Publisher - Kafka Client</name>
 
     <dependencies>
         <dependency>
