--- a/modules/samples/producers/mqtt-client/pom.xml
+++ b/modules/samples/producers/mqtt-client/pom.xml
@@ -24,6 +24,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>mqtt-client</artifactId>
+    <name>WSO2 CEP - Publisher - MQTT Client</name>
 
     <dependencies>
         <dependency>
