--- a/modules/samples/producers/pom.xml
+++ b/modules/samples/producers/pom.xml
@@ -37,6 +37,7 @@
         <module>jms-client</module>
         <module>mqtt-client</module>
         <module>kafka</module>
+        <module>soap-client</module>
 
         <!--<module>stock-quote</module>-->
         <!--<module>service-stats</module>-->
