--- a/modules/distribution/pom.xml
+++ b/modules/distribution/pom.xml
@@ -86,7 +86,7 @@
                                 <artifactItem>
                                     <groupId>org.apache.shindig</groupId>
                                     <artifactId>shindig-server</artifactId>
-                                    <version>2.5.2</version>
+                                    <version>${shindig.version}</version>
                                     <type>war</type>
                                     <overWrite>true</overWrite>
                                     <outputDirectory>target/shindig</outputDirectory>
